--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,7 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  cached_network_image: ^3.2.3
   carousel_slider: ^4.2.1
   cart_stepper: ^4.1.0
   cloud_firestore: ^4.3.2
@@ -45,11 +46,13 @@ dependencies:
   flutter_cart: ^0.0.8
   flutter_launcher_icons: ^0.12.0
   fluttertoast: ^8.1.3
+  google_fonts: ^4.0.4
   http: ^0.13.5
   image_picker: ^0.8.6+1
   provider: ^6.0.5
   rounded_loading_button: ^2.1.0
   shared_preferences: ^2.0.17
+  sidebarx: ^0.16.1
   smooth_star_rating_nsafe: ^1.0.0+1
   staggered_grid_view_flutter: ^0.0.4
 
@@ -75,7 +78,9 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - images/
+    - images/login.png
+    - assets/
+    - assets/images/
     - slider/
     - json/products.json
   # An image asset can refer to one or more resolution-specific "variants", see
