--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,7 @@ dependencies:
   provider: ^6.0.5
   rounded_loading_button: ^2.1.0
   shared_preferences: ^2.0.17
+  side_navigation: ^1.0.4
   sidebarx: ^0.16.1
   smooth_star_rating_nsafe: ^1.0.0+1
   staggered_grid_view_flutter: ^0.0.4
