--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,10 +45,13 @@ dependencies:
   flutter_barcode_scanner: ^2.0.0
   flutter_cart: ^0.0.8
   flutter_launcher_icons: ^0.12.0
+  flutter_localizations:
+    sdk: flutter
   fluttertoast: ^8.1.3
   google_fonts: ^4.0.4
   http: ^0.13.5
   image_picker: ^0.8.6+1
+  lottie: ^2.6.0
   provider: ^6.0.5
   rounded_loading_button: ^2.1.0
   shared_preferences: ^2.0.17
@@ -82,6 +85,7 @@ flutter:
     - images/login.png
     - assets/
     - assets/images/
+    - loadingJSON/
     - slider/
     - json/products.json
   # An image asset can refer to one or more resolution-specific "variants", see
