--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,10 +48,11 @@ dependencies:
   flutter_localizations:
     sdk: flutter
   fluttertoast: ^8.1.3
-  google_fonts: ^4.0.4
   http: ^0.13.5
+  google_fonts: ^4.0.3
   image_picker: ^0.8.6+1
   lottie: ^2.6.0
+  photo_view: ^0.14.0
   provider: ^6.0.5
   rounded_loading_button: ^2.1.0
   shared_preferences: ^2.0.17
