--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -60,6 +60,7 @@ dependencies:
   sidebarx: ^0.16.1
   smooth_star_rating_nsafe: ^1.0.0+1
   staggered_grid_view_flutter: ^0.0.4
+  excel: ^2.1.0
 
 dev_dependencies:
   flutter_lints: ^2.0.0
@@ -84,6 +85,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - images/login.png
+    - images/romania.png
     - assets/
     - assets/images/
     - loadingJSON/
