--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -61,6 +61,7 @@ dependencies:
   smooth_star_rating_nsafe: ^1.0.0+1
   staggered_grid_view_flutter: ^0.0.4
   excel: ^2.1.0
+  overlay_support: ^2.1.0
 
 dev_dependencies:
   flutter_lints: ^2.0.0
