--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -62,6 +62,9 @@ dependencies:
   staggered_grid_view_flutter: ^0.0.4
   excel: ^2.1.0
   overlay_support: ^2.1.0
+  flutter_scroll_to_top: ^2.3.0
+  animated_tree_view: ^2.1.0
+  syncfusion_flutter_charts: ^23.2.4
 
 dev_dependencies:
   flutter_lints: ^2.0.0
@@ -86,6 +89,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - images/login.png
+    - images/ilauncher.png
     - images/romania.png
     - assets/
     - assets/images/
