--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -89,6 +89,8 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - images/login.png
+    - images/diamond.png
+    - images/
     - images/ilauncher.png
     - images/romania.png
     - assets/
