--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,7 +38,7 @@ dependencies:
   file_picker: ^5.3.2
   firebase_auth: ^4.2.6
   firebase_core: ^2.5.0
-  firebase_messaging: ^14.2.2
+  firebase_messaging: ^14.7.10
   firebase_storage: ^11.0.11
   flutter:
     sdk: flutter
@@ -65,7 +65,8 @@ dependencies:
   flutter_scroll_to_top: ^2.3.0
   animated_tree_view: ^2.1.0
   syncfusion_flutter_charts: ^23.2.4
-
+  firebase_core_web: ^2.10.0
+  
 dev_dependencies:
   flutter_lints: ^2.0.0
   flutter_test:
