--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   cart_stepper: ^4.1.0
   cloud_firestore: ^4.3.2
   cupertino_icons: ^1.0.2
+  data_table_2: ^2.5.10
   dio: ^5.0.1
   dropdown_search: ^5.0.6
   file_picker: ^5.3.2
@@ -66,7 +67,7 @@ dependencies:
   animated_tree_view: ^2.1.0
   syncfusion_flutter_charts: ^23.2.4
   firebase_core_web: ^2.10.0
-  
+
 dev_dependencies:
   flutter_lints: ^2.0.0
   flutter_test:
