--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -67,6 +67,8 @@ dependencies:
   animated_tree_view: ^2.1.0
   syncfusion_flutter_charts: ^23.2.4
   firebase_core_web: ^2.10.0
+  flutter_datetime_picker: ^1.5.1
+  flutter_svg: ^2.0.9
 
 dev_dependencies:
   flutter_lints: ^2.0.0
@@ -97,6 +99,8 @@ flutter:
     - images/romania.png
     - assets/
     - assets/images/
+    - assets/images/logo.png
+    - assets/icons/
     - loadingJSON/
     - slider/
     - json/products.json
