--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,7 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  animated_tree_view: ^2.1.0
   cached_network_image: ^3.2.3
   carousel_slider: ^4.2.1
   cart_stepper: ^4.1.0
@@ -36,23 +37,30 @@ dependencies:
   data_table_2: ^2.5.10
   dio: ^5.0.1
   dropdown_search: ^5.0.6
+  excel: ^2.1.0
   file_picker: ^5.3.2
   firebase_auth: ^4.2.6
   firebase_core: ^2.5.0
+  firebase_core_web: ^2.10.0
   firebase_messaging: ^14.7.10
   firebase_storage: ^11.0.11
   flutter:
     sdk: flutter
   flutter_barcode_scanner: ^2.0.0
   flutter_cart: ^0.0.8
+  flutter_datetime_picker: ^1.5.1
   flutter_launcher_icons: ^0.12.0
   flutter_localizations:
     sdk: flutter
+  flutter_scroll_to_top: ^2.3.0
+  flutter_svg: ^2.0.9
   fluttertoast: ^8.1.3
-  http: ^0.13.5
+  fullscreen_window: ^1.0.4
   google_fonts: ^4.0.3
+  http: ^0.13.5
   image_picker: ^0.8.6+1
   lottie: ^2.6.0
+  overlay_support: ^2.1.0
   photo_view: ^0.14.0
   provider: ^6.0.5
   rounded_loading_button: ^2.1.0
@@ -61,14 +69,7 @@ dependencies:
   sidebarx: ^0.16.1
   smooth_star_rating_nsafe: ^1.0.0+1
   staggered_grid_view_flutter: ^0.0.4
-  excel: ^2.1.0
-  overlay_support: ^2.1.0
-  flutter_scroll_to_top: ^2.3.0
-  animated_tree_view: ^2.1.0
   syncfusion_flutter_charts: ^23.2.4
-  firebase_core_web: ^2.10.0
-  flutter_datetime_picker: ^1.5.1
-  flutter_svg: ^2.0.9
 
 dev_dependencies:
   flutter_lints: ^2.0.0
