--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -74,6 +74,8 @@ dependencies:
   syncfusion_flutter_signaturepad: ^23.2.4
   pdf: ^3.10.8
   image: ^4.1.7
+  flutter_local_notifications: ^16.3.3
+  awesome_dialog: ^3.2.0
 
 dev_dependencies:
   flutter_lints: ^2.0.0
