--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -76,6 +76,7 @@ dependencies:
   image: ^4.1.7
   flutter_local_notifications: ^16.3.3
   awesome_dialog: ^3.2.0
+  syncfusion_flutter_datagrid: ^23.2.4
 
 dev_dependencies:
   flutter_lints: ^2.0.0
